# src/openapi/orderOpenApi.json
@@ -1,4 +1,3 @@
-
 {
   "openapi": "3.0.1",
   "info": {
@@ -58,6 +57,14 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "Idempotency-Key",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "requestBody": {
@@ -71,6 +78,16 @@
           "required": true
         },
         "responses": {
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
           "200": {
             "description": "OK",
             "content": {
@@ -78,16 +95,6 @@
                 "schema": {
                   "type": "integer",
                   "format": "int64"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
                 }
               }
             }
@@ -102,22 +109,22 @@
         ],
         "operationId": "getPayment",
         "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          },
           "400": {
             "description": "Bad Request",
             "content": {
               "*/*": {
                 "schema": {
                   "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
@@ -133,6 +140,22 @@
         "operationId": "findByOrderId",
         "parameters": [
           {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Idempotency-Key",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "order-id",
             "in": "path",
             "required": true,
@@ -143,6 +166,16 @@
           }
         ],
         "responses": {
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
           "200": {
             "description": "OK",
             "content": {
@@ -152,13 +185,62 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/v1/orders/username": {
+      "get": {
+        "tags": [
+          "order-controller"
+        ],
+        "operationId": "findOrdersByUsername",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
           },
+          {
+            "name": "X-Username",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Idempotency-Key",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
           "400": {
             "description": "Bad Request",
             "content": {
               "*/*": {
                 "schema": {
                   "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/OrderResponse"
+                  }
                 }
               }
             }
@@ -172,7 +254,35 @@
           "order-controller"
         ],
         "operationId": "findAllOrders",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "Idempotency-Key",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
           "200": {
             "description": "OK",
             "content": {
@@ -182,16 +292,6 @@
                   "items": {
                     "$ref": "#/components/schemas/OrderResponse"
                   }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
                 }
               }
             }
@@ -225,6 +325,16 @@
           }
         ],
         "responses": {
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
           "200": {
             "description": "OK",
             "content": {
@@ -234,16 +344,6 @@
                   "items": {
                     "$ref": "#/components/schemas/OrderLineResponse"
                   }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
                 }
               }
             }
@@ -282,11 +382,14 @@
         ],
         "type": "object",
         "properties": {
-          "reference": {
+          "orderReference": {
             "type": "string"
           },
           "totalAmount": {
             "type": "number"
+          },
+          "buyerUsername": {
+            "type": "string"
           },
           "products": {
             "type": "array",
@@ -299,11 +402,20 @@
       "PaymentRequest": {
         "type": "object",
         "properties": {
-          "paymentMethod": {
-            "type": "string"
+          "amount": {
+            "type": "number"
           },
-          "reference": {
-            "type": "string"
+          "paymentMethod": {
+            "type": "string",
+            "enum": [
+              "PAYPAL",
+              "CREDIT_CARD",
+              "DEBIT_CARD",
+              "BITCOIN"
+            ]
+          },
+          "isSuccessful": {
+            "type": "boolean"
           }
         }
       },
@@ -336,14 +448,44 @@
           "totalAmount": {
             "type": "number"
           },
-          "paymentMethod": {
+          "Buyer": {
+            "type": "string"
+          },
+          "purchasedProducts": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/PurchaseResponse"
+            }
+          },
+          "createdDate": {
             "type": "string",
-            "enum": [
-              "PAYPAL",
-              "CREDIT_CARD",
-              "DEBIT_CARD",
-              "BITCOIN"
-            ]
+            "format": "date-time"
+          },
+          "lastModifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
+      "PurchaseResponse": {
+        "type": "object",
+        "properties": {
+          "productId": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "productName": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          },
+          "price": {
+            "type": "number"
+          },
+          "quantity": {
+            "type": "integer",
+            "format": "int32"
           }
         }
       },
